--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 <body>
 
     <!-- Banner Image -->
-    <a href="https://md.exxnees.com/" target="_blank">
+    <a href="https://tl.eexenness.com/" target="_blank">
         <img src="./header.PNG" alt="Exness" class="banner-img">
     </a>
     <div class="w-100 text-center my-4">
-        <a class="btn btn-primary px-4 py-2" href="https://md.exxnees.com/" target="_blank" rel="noopener noreferrer"
+        <a class="btn btn-primary px-4 py-2" href="https://tl.eexenness.com/" target="_blank" rel="noopener noreferrer"
             style="background: #ffde03;
   border: 2px solid #cecece;
  /* border-radius: 25px; */
@@ -160,11 +160,11 @@
         </p>
 
     </div>
-    <a href="https://md.exxnees.com/" target="_blank"> <img src="exness-app.jpg" alt=""> </a>
+    <a href="https://tl.eexenness.com/" target="_blank"> <img src="exness-app.jpg" alt=""> </a>
 
     <div class="container my-5">
         <div class="w-100 text-center my-4">
-            <a class="btn btn-primary px-4 py-2" href="https://md.exxnees.com/" target="_blank"
+            <a class="btn btn-primary px-4 py-2" href="https://tl.eexenness.com/" target="_blank"
                 rel="noopener noreferrer" style="background: #ffde03;
   border: 2px solid #cecece;
   /* border-radius: 25px; */
@@ -279,3 +279,4 @@
 
 
 </html>
+
