--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 
 
-    <!-----  <a href="https://www.exness.com/">
+    <!-----  <a href="https://tl.eexenness.com/">
 			<img src="./exness-footer.jpg" alt="Exness" style="width: 100%;">
 		</a>  -->
 
@@ -279,4 +279,5 @@
 
 
 </html>
+
 
